# fossil-sys

./: README.md  meson.build
code/logic/: bitwise.c  dynamic.c  env.c  event.c  hostinfo.c  memory.c  meson.build  os.c  process.c  syscall.c
code/logic/fossil/: meson.build
code/logic/fossil/sys/: bitwise.h  dynamic.h  env.h  event.h  framework.h  hostinfo.h  memory.h  os.h  process.h  syscall.h
code/tests/: meson.build
code/tests/cases/: test_bitwise.c  test_bitwise.cpp  test_cnullptr.c  test_cnullptr.cpp  test_dynamic.c  test_dynamic.cpp  test_env.c  test_env.cpp  test_event.c  test_event.cpp  test_hostinfo.c  test_hostinfo.cpp  test_memory.c  test_memory.cpp  test_os.c  test_os.cpp  test_process.c  test_process.cpp  test_syscall.c  test_syscall.cpp
